<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EBD93F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="285dp"
        android:layout_height="360dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/ic_imc"
        tools:srcCompat="@drawable/ic_imc"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tv_weight_main"
        style="@style/tv_style"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/altura"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/check_idoso" />

    <EditText
        android:id="@+id/et_altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_altura"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/tv_height_main"
        app:layout_constraintEnd_toEndOf="@+id/tv_weight_main"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_weight_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight_main"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_height_main"
        style="@style/tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/et_peso"
        app:layout_constraintEnd_toEndOf="@+id/et_altura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_altura"
        app:layout_constraintTop_toBottomOf="@+id/et_altura" />

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/confirme"
        app:layout_constraintEnd_toEndOf="@+id/tv_height_main"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_height_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_height_main"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/confirme"
        style="@style/btm_style"
        android:text="@string/btm_confirm"
        android:shadowColor="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btm_clean"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_peso" />

    <Button
        android:id="@+id/btm_clean"
        style="@style/btm_style"
        android:text="@string/btm_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/confirme"
        app:layout_constraintTop_toBottomOf="@+id/et_peso"
        app:layout_constraintVertical_bias="0.513" />

    <CheckBox
        android:id="@+id/check_idoso"
        style="@style/tv_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check_idoso"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>